--- a/Kirsche/mods.html
+++ b/Kirsche/mods.html
@@ -2,16 +2,169 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Twitch Stream Manager Toggle</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Live Stream</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <style>
-        #iframeContainer {
+        /* Your existing CSS */
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        nav {
+            margin-top: 0;
+        }
+        main {
+            margin-top: 0;
+        }
+        .main-container {
+            padding-top: 0;
+            display: flex;
+            justify-content: space-between;
+            flex: 1;
+        }
+        .stream-container {
+            flex: 3;
+            display: flex-start;
+            flex-direction: column;
+            margin-top: 0;
+            padding-top: 0;
+        }
+        .chat-container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            margin-top: 0;
+            padding-top: 0;
+        }
+        .stream-buttons {
+            margin-top: 0;
+            display: flex;
+            align-items: flex-start;
+            justify-content: center;
+            margin-bottom: 0;
+        }
+        .menu-button {
+            background: 1px solid lightgrey;
+            color: white;
+            cursor: pointer;
+            width: 50px;
+            height: 50px;
+            margin-top: 0;
+            margin-right: 0.5rem;
+            margin-bottom: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .menu-button img {
+            width: 100%;
+            height: 100%;
+        }
+        .stream-buttons .youtube-btn,
+        .stream-buttons .twitch-btn,
+        .stream-buttons .rumble-btn {
+            flex: 1;
+            padding: 0.5rem;
+            margin: 0 0.25rem;
+            color: white;
+        }
+        .stream-buttons .youtube-btn {
+            background-color: red;
+        }
+        .stream-buttons .twitch-btn {
+            background-color: #9146FF;
+        }
+        .stream-buttons .rumble-btn {
+            background-color: lightgreen;
+        }
+        .tabs {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 0.5rem;
+        }
+        .tabs button {
+            padding: 0.5rem;
+            margin: 0 0.25rem;
+            color: white;
+        }
+        .tabs .youtube-btn {
+            background-color: red;
+        }
+        .tabs .twitch-btn {
+            background-color: #9146FF;
+        }
+        .tabs .rumble-btn {
+            background-color: lightgreen;
+        }
+        .tabs img {
+            height: 20px;
+            width: 20px;
+        }
+        .tab-content {
             display: none;
+            height: 100%;
+        }
+        .tab-content.active {
+            display: block;
+            height: 100%;
+        }
+        iframe {
+            width: 100%;
+            height: calc(100vh - 4rem);
+            border: none;
+        }
+        .chat-iframe {
+            width: 100%;
+            height: calc(100vh - 4rem);
+            border: none;
+        }
+        .sidebar {
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
+            width: 250px;
             height: 100%;
+            background-color: #333;
+            color: white;
+            padding: 1rem;
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+        }
+        .sidebar.active {
+            transform: translateX(0);
+        }
+        .sidebar ul {
+            list-style-type: none;
+            padding: 2.25rem 0 0 0;
+        }
+        .sidebar ul li {
+            margin: 1rem 0;
+        }
+        .sidebar ul li a {
+            color: white;
+            text-decoration: none;
+        }
+        .sidebar .menu-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+        }
+
+        /* CSS for the Toggle Button and Iframe Container */
+        #iframeContainer {
+            display: none;
+            position: fixed;
+            top: 50px; /* Adjust as needed */
+            left: 0;
+            width: 100%;
+            height: 90%;
             background: rgba(0, 0, 0, 0.8);
             z-index: 1000;
         }
@@ -23,8 +176,8 @@
         }
         #toggleButton {
             position: fixed;
-            bottom: 20px;
-            right: 20px;
+            top: 0;
+            right: 0;
             padding: 10px 20px;
             background: #9147ff;
             color: white;
@@ -33,34 +186,169 @@
             z-index: 1001;
         }
     </style>
+    <script>
+        /* Your existing JavaScript */
+        async function loadConfig() {
+            const response = await fetch('config.json');
+            const config = await response.json();
+
+            const apiKey = config.youtube_api_key; // Add your API key in config.json
+            const channelId = config.youtube_channel_id;
+
+            const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
+            const videoResponse = await fetch(apiUrl);
+            const videoData = await videoResponse.json();
+
+            if (videoData.items.length > 0) {
+                config.youtube_live_video_id = videoData.items[0].id.videoId;
+            }
+
+            return config;
+        }
+
+        async function loadStream(service) {
+            const config = await loadConfig();
+            const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
+            const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
+            const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+
+            const iframe = document.getElementById('live-stream');
+
+            if (service === 'youtube') {
+                iframe.src = youtubeEmbed;
+            } else if (service === 'twitch') {
+                iframe.src = twitchEmbed;
+            } else if (service === 'rumble') {
+                iframe.src = rumbleEmbed;
+            } else {
+                iframe.src = youtubeEmbed;
+
+                iframe.onerror = function() {
+                    iframe.src = twitchEmbed;
+                    iframe.onerror = function() {
+                        iframe.src = rumbleEmbed;
+                    };
+                };
+            }
+        }
+
+        function switchTab(tabId) {
+            document.querySelectorAll('.tab-content').forEach(content => {
+                content.classList.remove('active');
+            });
+            document.getElementById(tabId).classList.add('active');
+        }
+
+        async function loadMenu() {
+            const response = await fetch('menu.json');
+            const menuItems = await response.json();
+            const menuList = document.getElementById('menu-list');
+            menuList.innerHTML = '';
+            menuItems.forEach(item => {
+                const li = document.createElement('li');
+                const a = document.createElement('a');
+                a.href = item.url;
+                a.textContent = item.name;
+                li.appendChild(a);
+                menuList.appendChild(li);
+            });
+        }
+
+        function toggleSidebar() {
+            document.getElementById('sidebar').classList.toggle('active');
+        }
+
+        async function loadChat() {
+            const config = await loadConfig();
+            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
+            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
+        }
+
+        window.onload = async function() {
+            await loadStream();
+            await loadChat();
+            switchTab('twitch-chat');
+            await loadMenu();
+        }
+
+        /* JavaScript for the Toggle Button and Iframe Container */
+        document.addEventListener('DOMContentLoaded', () => {
+            const toggleButton = document.getElementById('toggleButton');
+            const iframeContainer = document.getElementById('iframeContainer');
+            const iframe = document.getElementById('iframe');
+
+            // Fetch twitch_id from config.json and set iframe src
+            fetch('config.json')
+                .then(response => response.json())
+                .then(config => {
+                    const twitchId = config.twitch_id;
+                    iframe.src = `https://dashboard.twitch.tv/u/${twitchId}/stream-manager`;
+                })
+                .catch(error => console.error('Error loading config:', error));
+
+            toggleButton.addEventListener('click', () => {
+                if (iframeContainer.style.display === 'none' || iframeContainer.style.display === '') {
+                    iframeContainer.style.display = 'block';
+                } else {
+                    iframeContainer.style.display = 'none';
+                }
+            });
+
+            document.addEventListener('click', (event) => {
+                if (!iframeContainer.contains(event.target) && !toggleButton.contains(event.target)) {
+                    iframeContainer.style.display = 'none';
+                }
+            });
+        });
+    </script>
 </head>
 <body>
+    <nav>
+        <ul>
+            <!-- Your existing menu items -->
+        </ul>
+    </nav>
     <button id="toggleButton">Toggle Stream Manager</button>
     <div id="iframeContainer">
         <iframe id="iframe"></iframe>
     </div>
-
-    <script>
-        const toggleButton = document.getElementById('toggleButton');
-        const iframeContainer = document.getElementById('iframeContainer');
-        const iframe = document.getElementById('iframe');
-
-        // Fetch twitch_id from config.json and set iframe src
-        fetch('config.json')
-            .then(response => response.json())
-            .then(config => {
-                const twitchId = config.twitch_id;
-                iframe.src = `https://dashboard.twitch.tv/u/${twitchId}/stream-manager`;
-            })
-            .catch(error => console.error('Error loading config:', error));
-
-        toggleButton.addEventListener('click', () => {
-            if (iframeContainer.style.display === 'none' || iframeContainer.style.display === '') {
-                iframeContainer.style.display = 'block';
-            } else {
-                iframeContainer.style.display = 'none';
-            }
-        });
-    </script>
+    <main>
+        <div class="main-container">
+            <div class="stream-container">
+                <div class="stream-buttons">
+                    <button class="menu-button" onclick="toggleSidebar()">
+                        <img src="menu.png" alt="Menu">
+                    </button>
+                    <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
+                    <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
+                    <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
+                </div>
+                <iframe id="live-stream" src=""></iframe>
+            </div>
+            <div class="chat-container">
+                <div class="tabs">
+                    <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
+                    <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
+                    <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
+                </div>
+                <div id="twitch-chat" class="tab-content active">
+                    <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
+                </div>
+                <div id="youtube-chat" class="tab-content">
+                    <iframe class="chat-iframe" src="" id="youtube-chat-iframe"></iframe>
+                </div>
+                <div id="rumble-chat" class="tab-content">
+                    <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
+                </div>
+            </div>
+        </div>
+    </main>
+    <div id="sidebar" class="sidebar">
+        <button class="menu-button" onclick="toggleSidebar()">
+            <img src="menu.png" alt="Menu">
+        </button>
+        <ul id="menu-list"></ul>
+    </div>
 </body>
 </html>
