--- a/index.html
+++ b/index.html
@@ -6,201 +6,56 @@
     <title>Live Stream</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css">
     <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-        body {
-            display: flex;
-            flex-direction: column;
-        }
-        nav {
-            margin-top: 0;
-        }
-        main {
-            margin-top: 0;
-        }
-        .main-container {
-            padding-top: 0;
-            display: flex;
-            justify-content: space-between;
-            flex: 1;
-        }
-        .stream-container {
-            flex: 3;
-            display: flex-start;
-            flex-direction: column;
-			margin-top: 0;
-			padding-top: 0;
-        }
-        .chat-container {
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-			margin-top: 0;
-			padding-top: 0;
-        }
-        .stream-buttons {
-            margin-top: 0;
-			display: flex;
-            align-items: flex-start;
-            justify-content: center;
-            margin-bottom: 0;
-        }
-        .menu-button {
-            background: 1px solid lightgrey;
-            color: white;
-			cursor: pointer;
-            width: 50px;
-            height: 50px;
-            margin-top: 0;
-			margin-right: 0.5rem;
-			margin-bottom: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .menu-button img {
-            width: 100%;
-            height: 100%;
-        }
-        .stream-buttons .youtube-btn,
-        .stream-buttons .twitch-btn,
-        .stream-buttons .rumble-btn {
-            flex: 1;
-            padding: 0.5rem;
-            margin: 0 0.25rem;
-            color: white;
-        }
-        .stream-buttons .youtube-btn {
-            background-color: red;
-        }
-        .stream-buttons .twitch-btn {
-            background-color: #9146FF;
-        }
-        .stream-buttons .rumble-btn {
-            background-color: lightgreen;
-        }
-        .tabs {
-            display: flex;
-            justify-content: center;
-            margin-bottom: 0.5rem;
-        }
-        .tabs button {
-            padding: 0.5rem;
-            margin: 0 0.25rem;
-            color: white;
-        }
-        .tabs .youtube-btn {
-            background-color: red;
-        }
-        .tabs .twitch-btn {
-            background-color: #9146FF;
-        }
-        .tabs .rumble-btn {
-            background-color: lightgreen;
-        }
-        .tabs img {
-            height: 20px;
-            width: 20px;
-        }
-        .tab-content {
-            display: none;
-            height: 100%;
-        }
-        .tab-content.active {
-            display: block;
-            height: 100%;
-        }
-        iframe {
-            width: 100%;
-            height: calc(100vh - 4rem);
-            border: none;
-        }
-        .chat-iframe {
-            width: 100%;
-            height: calc(100vh - 4rem);
-            border: none;
-        }
-        .sidebar {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 250px;
-            height: 100%;
-            background-color: #333;
-            color: white;
-            padding: 1rem;
-            transform: translateX(-100%);
-            transition: transform 0.3s ease;
-        }
-        .sidebar.active {
-            transform: translateX(0);
-        }
-        .sidebar ul {
-            list-style-type: none;
-            padding: 2.25rem 0 0 0;
-        }
-        .sidebar ul li {
-            margin: 1rem 0;
-        }
-        .sidebar ul li a {
-            color: white;
-            text-decoration: none;
-        }
-        .sidebar .menu-button {
-            position: absolute;
-            top: 10px;
-            left: 10px;
+        /* ... existing styles ... */
+
+        .tabs .x-btn {
+            background-color: black;
         }
     </style>
     <script>
         async function loadConfig() {
-			const response = await fetch('config.json');
-			const config = await response.json();
+            const response = await fetch('config.json');
+            const config = await response.json();
 
-			const apiKey = config.youtube_api_key; // Add your API key in config.json
-			const channelId = config.youtube_channel_id;
+            const apiKey = config.youtube_api_key; // Add your API key in config.json
+            const channelId = config.youtube_channel_id;
 
-			const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
-			const videoResponse = await fetch(apiUrl);
-			const videoData = await videoResponse.json();
+            const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
+            const videoResponse = await fetch(apiUrl);
+            const videoData = await videoResponse.json();
 
-			if (videoData.items.length > 0) {
-				config.youtube_live_video_id = videoData.items[0].id.videoId;
-			}
+            if (videoData.items.length > 0) {
+                config.youtube_live_video_id = videoData.items[0].id.videoId;
+            }
 
-			return config;
-		}
-
+            return config;
+        }
 
         async function loadStream(service) {
-			const config = await loadConfig();
-			const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
-			const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
-			const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+            const config = await loadConfig();
+            const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
+            const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
+            const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
 
-			const iframe = document.getElementById('live-stream');
+            const iframe = document.getElementById('live-stream');
 
-			if (service === 'youtube') {
-				iframe.src = youtubeEmbed;
-			} else if (service === 'twitch') {
-				iframe.src = twitchEmbed;
-			} else if (service === 'rumble') {
-				iframe.src = rumbleEmbed;
-			} else {
-				iframe.src = youtubeEmbed;
+            if (service === 'youtube') {
+                iframe.src = youtubeEmbed;
+            } else if (service === 'twitch') {
+                iframe.src = twitchEmbed;
+            } else if (service === 'rumble') {
+                iframe.src = rumbleEmbed;
+            } else {
+                iframe.src = youtubeEmbed;
 
-				iframe.onerror = function() {
-					iframe.src = twitchEmbed;
-					iframe.onerror = function() {
-						iframe.src = rumbleEmbed;
-            };
-        };
-    }
-}
+                iframe.onerror = function() {
+                    iframe.src = twitchEmbed;
+                    iframe.onerror = function() {
+                        iframe.src = rumbleEmbed;
+                    };
+                };
+            }
+        }
 
         function switchTab(tabId) {
             document.querySelectorAll('.tab-content').forEach(content => {
@@ -224,8 +79,12 @@
             });
         }
 
-        function toggleSidebar() {
-            document.getElementById('sidebar').classList.toggle('active');
+        async function loadChat() {
+            const config = await loadConfig();
+            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
+            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
+            document.getElementById('x-chat-iframe').src = `https://x.com/${config.x_channel}/chat`;
         }
 
         window.onload = async function() {
@@ -254,6 +113,7 @@
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
                 <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
+                <button class="x-btn" onclick="switchTab('x-chat')">X Chat</button>
             </div>
             <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
@@ -264,6 +124,9 @@
             <div id="rumble-chat" class="tab-content">
                 <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
             </div>
+            <div id="x-chat" class="tab-content">
+                <iframe class="chat-iframe" src="" id="x-chat-iframe"></iframe>
+            </div>
         </div>
     </main>
     <div id="sidebar" class="sidebar">
@@ -272,20 +135,5 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
-    <script>
-        async function loadChat() {
-            const config = await loadConfig();
-            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
-            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
-            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
-        }
-
-        window.onload = async function() {
-            await loadStream();
-            await loadChat();
-            switchTab('twitch-chat');
-            await loadMenu();
-        }
-    </script>
 </body>
 </html>
