--- a/index.html
+++ b/index.html
@@ -88,10 +88,12 @@
             justify-content: center;
             margin-bottom: 0.5rem;
         }
-        .tabs button {
+        .tabs button,
+        .tabs a {
             padding: 0.5rem;
             margin: 0 0.25rem;
             color: white;
+            text-decoration: none;
         }
         .tabs .youtube-btn {
             background-color: red;
@@ -235,7 +237,6 @@
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
-            document.getElementById('x-chat-iframe').src = `https://x.com/${config.x_channel}`;
         }
 
         window.onload = async function() {
@@ -264,7 +265,7 @@
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
                 <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
-                <button class="x-btn" onclick="switchTab('x-chat')">X</button>
+                <a class="x-btn" href="#" id="x-chat-link" target="_blank">X</a>
             </div>
             <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
@@ -275,9 +276,6 @@
             <div id="rumble-chat" class="tab-content">
                 <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
             </div>
-            <div id="x-chat" class="tab-content">
-                <iframe class="chat-iframe" src="" id="x-chat-iframe"></iframe>
-            </div>
         </div>
     </main>
     <div id="sidebar" class="sidebar">
@@ -286,5 +284,21 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
+    <script>
+        document.getElementById('x-chat-link').href = 'https://x.com/USERNAME_HERE';
+
+        async function loadConfig() {
+            const response = await fetch('config.json');
+            const config = await response.json();
+            document.getElementById('x-chat-link').href = `https://x.com/${config.x_channel}`;
+        }
+
+        window.onload = async function() {
+            await loadStream();
+            await loadChat();
+            switchTab('twitch-chat');
+            await loadMenu();
+        }
+    </script>
 </body>
 </html>
