--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
             flex: 3;
             display: flex-start;
             flex-direction: column;
-            margin-top: 0;
-            padding-top: 0;
+			margin-top: 0;
+			padding-top: 0;
         }
         .chat-container {
             flex: 1;
             display: flex;
             flex-direction: column;
             height: 100%;
-            margin-top: 0;
-            padding-top: 0;
+			margin-top: 0;
+			padding-top: 0;
         }
         .stream-buttons {
             margin-top: 0;
-            display: flex;
+			display: flex;
             align-items: flex-start;
             justify-content: center;
             margin-bottom: 0;
@@ -52,12 +52,12 @@
         .menu-button {
             background: 1px solid lightgrey;
             color: white;
-            cursor: pointer;
+			cursor: pointer;
             width: 50px;
             height: 50px;
             margin-top: 0;
-            margin-right: 0.5rem;
-            margin-bottom: 0;
+			margin-right: 0.5rem;
+			margin-bottom: 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -88,12 +88,10 @@
             justify-content: center;
             margin-bottom: 0.5rem;
         }
-        .tabs button,
-        .tabs a {
+        .tabs button {
             padding: 0.5rem;
             margin: 0 0.25rem;
             color: white;
-            text-decoration: none;
         }
         .tabs .youtube-btn {
             background-color: red;
@@ -103,9 +101,6 @@
         }
         .tabs .rumble-btn {
             background-color: lightgreen;
-        }
-        .tabs .x-btn {
-            background-color: black;
         }
         .tabs img {
             height: 20px;
@@ -163,48 +158,49 @@
     </style>
     <script>
         async function loadConfig() {
-            const response = await fetch('config.json');
-            const config = await response.json();
+			const response = await fetch('config.json');
+			const config = await response.json();
 
-            const apiKey = config.youtube_api_key; // Add your API key in config.json
-            const channelId = config.youtube_channel_id;
+			const apiKey = config.youtube_api_key; // Add your API key in config.json
+			const channelId = config.youtube_channel_id;
 
-            const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
-            const videoResponse = await fetch(apiUrl);
-            const videoData = await videoResponse.json();
+			const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
+			const videoResponse = await fetch(apiUrl);
+			const videoData = await videoResponse.json();
 
-            if (videoData.items.length > 0) {
-                config.youtube_live_video_id = videoData.items[0].id.videoId;
-            }
+			if (videoData.items.length > 0) {
+				config.youtube_live_video_id = videoData.items[0].id.videoId;
+			}
 
-            return config;
-        }
+			return config;
+		}
+
 
         async function loadStream(service) {
-            const config = await loadConfig();
-            const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
-            const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
-            const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+			const config = await loadConfig();
+			const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
+			const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
+			const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
 
-            const iframe = document.getElementById('live-stream');
+			const iframe = document.getElementById('live-stream');
 
-            if (service === 'youtube') {
-                iframe.src = youtubeEmbed;
-            } else if (service === 'twitch') {
-                iframe.src = twitchEmbed;
-            } else if (service === 'rumble') {
-                iframe.src = rumbleEmbed;
-            } else {
-                iframe.src = youtubeEmbed;
+			if (service === 'youtube') {
+				iframe.src = youtubeEmbed;
+			} else if (service === 'twitch') {
+				iframe.src = twitchEmbed;
+			} else if (service === 'rumble') {
+				iframe.src = rumbleEmbed;
+			} else {
+				iframe.src = youtubeEmbed;
 
-                iframe.onerror = function() {
-                    iframe.src = twitchEmbed;
-                    iframe.onerror = function() {
-                        iframe.src = rumbleEmbed;
-                    };
-                };
-            }
-        }
+				iframe.onerror = function() {
+					iframe.src = twitchEmbed;
+					iframe.onerror = function() {
+						iframe.src = rumbleEmbed;
+            };
+        };
+    }
+}
 
         function switchTab(tabId) {
             document.querySelectorAll('.tab-content').forEach(content => {
@@ -230,13 +226,6 @@
 
         function toggleSidebar() {
             document.getElementById('sidebar').classList.toggle('active');
-        }
-
-        async function loadChat() {
-            const config = await loadConfig();
-            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
-            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
-            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
         }
 
         window.onload = async function() {
@@ -265,7 +254,6 @@
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
                 <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
-                <a class="x-btn" href="#" id="x-chat-link" target="_blank">X</a>
             </div>
             <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
@@ -285,12 +273,11 @@
         <ul id="menu-list"></ul>
     </div>
     <script>
-        document.getElementById('x-chat-link').href = 'https://x.com/USERNAME_HERE';
-
-        async function loadConfig() {
-            const response = await fetch('config.json');
-            const config = await response.json();
-            document.getElementById('x-chat-link').href = `https://x.com/${config.x_channel}`;
+        async function loadChat() {
+            const config = await loadConfig();
+            document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
+            document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
+            document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
         }
 
         window.onload = async function() {
