--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
             flex: 1;
         }
         .stream-container {
-            flex: 3;
+            flex: 3.3; /* Increased by 10% */
             display: flex-start;
             flex-direction: column;
-			margin-top: 0;
-			padding-top: 0;
+            margin-top: 0;
+            padding-top: 0;
         }
         .chat-container {
-            flex: 1;
+            flex: 0.7; /* Decreased by 10% */
             display: flex;
             flex-direction: column;
             height: 100%;
-			margin-top: 0;
-			padding-top: 0;
+            margin-top: 0;
+            padding-top: 0;
         }
         .stream-buttons {
             margin-top: 0;
-			display: flex;
+            display: flex;
             align-items: flex-start;
             justify-content: center;
             margin-bottom: 0;
@@ -52,12 +52,12 @@
         .menu-button {
             background: 1px solid lightgrey;
             color: white;
-			cursor: pointer;
+            cursor: pointer;
             width: 50px;
             height: 50px;
             margin-top: 0;
-			margin-right: 0.5rem;
-			margin-bottom: 0;
+            margin-right: 0.5rem;
+            margin-bottom: 0;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -158,57 +158,46 @@
     </style>
     <script>
         async function loadConfig() {
-			const response = await fetch('config.json');
-			const config = await response.json();
-
-			const apiKey = config.youtube_api_key; // Add your API key in config.json
-			const channelId = config.youtube_channel_id;
-
-			const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
-			const videoResponse = await fetch(apiUrl);
-			const videoData = await videoResponse.json();
-
-			if (videoData.items.length > 0) {
-				config.youtube_live_video_id = videoData.items[0].id.videoId;
-			}
-
-			return config;
-		}
-
-
+            const response = await fetch('config.json');
+            const config = await response.json();
+            const apiKey = config.youtube_api_key; // Add your API key in config.json
+            const channelId = config.youtube_channel_id;
+            const apiUrl = `https://www.googleapis.com/youtube/v3/search?part=snippet&channelId=${channelId}&eventType=live&type=video&key=${apiKey}`;
+            const videoResponse = await fetch(apiUrl);
+            const videoData = await videoResponse.json();
+            if (videoData.items.length > 0) {
+                config.youtube_live_video_id = videoData.items[0].id.videoId;
+            }
+            return config;
+        }
         async function loadStream(service) {
-			const config = await loadConfig();
-			const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
-			const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
-			const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
-
-			const iframe = document.getElementById('live-stream');
-
-			if (service === 'youtube') {
-				iframe.src = youtubeEmbed;
-			} else if (service === 'twitch') {
-				iframe.src = twitchEmbed;
-			} else if (service === 'rumble') {
-				iframe.src = rumbleEmbed;
-			} else {
-				iframe.src = youtubeEmbed;
-
-				iframe.onerror = function() {
-					iframe.src = twitchEmbed;
-					iframe.onerror = function() {
-						iframe.src = rumbleEmbed;
-            };
-        };
-    }
-}
-
+            const config = await loadConfig();
+            const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
+            const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
+            const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+            const iframe = document.getElementById('live-stream');
+            if (service === 'youtube') {
+                iframe.src = youtubeEmbed;
+            } else if (service === 'twitch') {
+                iframe.src = twitchEmbed;
+            } else if (service === 'rumble') {
+                iframe.src = rumbleEmbed;
+            } else {
+                iframe.src = youtubeEmbed;
+                iframe.onerror = function() {
+                    iframe.src = twitchEmbed;
+                    iframe.onerror = function() {
+                        iframe.src = rumbleEmbed;
+                    };
+                };
+            }
+        }
         function switchTab(tabId) {
             document.querySelectorAll('.tab-content').forEach(content => {
                 content.classList.remove('active');
             });
             document.getElementById(tabId).classList.add('active');
         }
-
         async function loadMenu() {
             const response = await fetch('menu.json');
             const menuItems = await response.json();
@@ -223,11 +212,9 @@
                 menuList.appendChild(li);
             });
         }
-
         function toggleSidebar() {
             document.getElementById('sidebar').classList.toggle('active');
         }
-
         window.onload = async function() {
             await loadStream();
             await loadChat();
@@ -279,7 +266,6 @@
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
         }
-
         window.onload = async function() {
             await loadStream();
             await loadChat();
