--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
         .tabs .rumble-btn {
             background-color: lightgreen;
         }
+        .tabs .twitter-btn {
+            background-color: black;
+            color: white;
+        }
         .tabs img {
             height: 20px;
             width: 20px;
@@ -175,12 +179,12 @@
             return config;
         }
 
-
         async function loadStream(service) {
             const config = await loadConfig();
             const youtubeEmbed = `https://www.youtube.com/embed/${config.youtube_live_video_id}?autoplay=1`;
             const twitchEmbed = `https://player.twitch.tv/?channel=${config.twitch_channel}&parent=${window.location.hostname}`;
             const rumbleEmbed = `https://rumble.com/embed/live/${config.rumble_live_id}`;
+            const twitterEmbed = `https://twitter.com/${config.x_channel}`;
 
             const iframe = document.getElementById('live-stream');
 
@@ -190,6 +194,8 @@
                 iframe.src = twitchEmbed;
             } else if (service === 'rumble') {
                 iframe.src = rumbleEmbed;
+            } else if (service === 'twitter') {
+                iframe.src = twitterEmbed;
             } else {
                 iframe.src = youtubeEmbed;
 
@@ -246,6 +252,7 @@
                 <button class="youtube-btn" onclick="loadStream('youtube')">YouTube</button>
                 <button class="twitch-btn" onclick="loadStream('twitch')">Twitch</button>
                 <button class="rumble-btn" onclick="loadStream('rumble')">Rumble</button>
+                <button class="twitter-btn" onclick="loadStream('twitter')">X</button>
             </div>
             <iframe id="live-stream" src=""></iframe>
         </div>
@@ -254,6 +261,7 @@
                 <button class="twitch-btn" onclick="switchTab('twitch-chat')"><img src="Twitch.png" alt="Twitch Chat"></button>
                 <button class="youtube-btn" onclick="switchTab('youtube-chat')"><img src="YouTube.png" alt="YouTube Chat"></button>
                 <button class="rumble-btn" onclick="switchTab('rumble-chat')"><img src="Rumble.png" alt="Rumble Chat"></button>
+                <button class="twitter-btn" onclick="switchTab('twitter-chat')"><img src="twitter.png" alt="Twitter Chat"></button>
             </div>
             <div id="twitch-chat" class="tab-content active">
                 <iframe class="chat-iframe" src="" id="twitch-chat-iframe"></iframe>
@@ -263,6 +271,9 @@
             </div>
             <div id="rumble-chat" class="tab-content">
                 <iframe class="chat-iframe" src="" id="rumble-chat-iframe"></iframe>
+            </div>
+            <div id="twitter-chat" class="tab-content">
+                <iframe class="chat-iframe" src="" id="twitter-chat-iframe"></iframe>
             </div>
         </div>
     </main>
@@ -278,6 +289,7 @@
             document.getElementById('twitch-chat-iframe').src = `https://www.twitch.tv/embed/${config.twitch_channel}/chat?parent=${window.location.hostname}`;
             document.getElementById('youtube-chat-iframe').src = `https://www.youtube.com/live_chat?v=${config.youtube_live_video_id}&embed_domain=${window.location.hostname}&origin=${window.location.origin}`;
             document.getElementById('rumble-chat-iframe').src = `https://rumble.com/embed/chat/${config.rumble_chat_id}`;
+            document.getElementById('twitter-chat-iframe').src = `https://twitter.com/${config.x_channel}`;
         }
 
         window.onload = async function() {
