--- a/index.html
+++ b/index.html
@@ -286,5 +286,7 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
+<a class="twitter-timeline" href="https://twitter.com/Indulgence82?ref_src=twsrc%5Etfw">Tweets by Indulgence82</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 </html>
+
