--- a/index.html
+++ b/index.html
@@ -159,7 +159,10 @@
             left: 10px;
         }
         .twitter-tweet {
-            margin-bottom: 1rem;
+            width: 100%;
+            height: 100px;
+            border: none;
+            margin-bottom: 10px;
         }
     </style>
     <script>
