--- a/index.html
+++ b/index.html
@@ -317,6 +317,6 @@
         </button>
         <ul id="menu-list"></ul>
     </div>
-	<iframe src='https://www.juicer.io/api/feeds/indulgence82/iframe' frameborder='0' width='250' height='1000' style='display:block;margin:0 auto;'></iframe>
+	<iframe src="https://streamelements.com/Indulgence82/tip" width="100%" height="600px" frameborder="0"></iframe>
 </body>
 </html>
