--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             }
 
             // Conditionally display buttons
-            if (config.youtube_live_video_id) document.querySelector('.youtube-btn').style.display = 'block';
+            if (config.youtube_video_id) document.querySelector('.youtube-btn').style.display = 'block';
             if (config.twitch_channel) document.querySelector('.twitch-btn').style.display = 'block';
             if (config.rumble_live_id) document.querySelector('.rumble-btn').style.display = 'block';
             if (config.kick_live_id) document.querySelector('.kick-btn').style.display = 'block';
